[gd_scene load_steps=18 format=3 uid="uid://cwnspteeyje6q"]

[ext_resource type="Script" uid="uid://c57unpcppvd0n" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/WarningModal/warning_modal.gd" id="1_q3rcv"]
[ext_resource type="PackedScene" uid="uid://loky6w15vqbn" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/Splash/Splash.tscn" id="2_w10ti"]
[ext_resource type="Texture2D" uid="uid://ch8kmv3c7uul0" path="res://Media/images/Defaults/redacted.png" id="2_wo0rv"]
[ext_resource type="FontFile" uid="uid://dgdnjq5h1ldkm" path="res://Fonts/VCR_OSD_MONO.ttf" id="4_2qvr3"]
[ext_resource type="LabelSettings" uid="uid://bnryvwswipkov" path="res://Fonts/font_2_32_white.tres" id="4_w10ti"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="5_2qvr3"]
[ext_resource type="LabelSettings" uid="uid://c6jfb8gq36fsd" path="res://Fonts/font_1_black_inverse.tres" id="5_dt46u"]
[ext_resource type="PackedScene" uid="uid://diewdd1a4yfp1" path="res://Components/BtnControls/BtnControls.tscn" id="9_0amot"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_75o2t"]

[sub_resource type="Shader" id="Shader_kq5a2"]
code = "shader_type canvas_item;

uniform float blur_radius : hint_range(0.0, 20.0) = 6.0;
uniform vec2 blur_direction = vec2(1.0, 0.0); // Set per pass

void fragment() {
    vec2 texel_size = 1.0 / vec2(textureSize(TEXTURE, 0));
    vec2 direction = normalize(blur_direction) * texel_size * blur_radius;

    float weights[5] = float[](0.227027, 0.1945946, 0.1216216, 0.054054, 0.016216);

    vec4 color = texture(TEXTURE, UV) * weights[0];

    for (int i = 1; i < 5; i++) {
        vec2 offset = direction * float(i);
        color += texture(TEXTURE, UV + offset) * weights[i];
        color += texture(TEXTURE, UV - offset) * weights[i];
    }

    COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4xaw"]
shader = SubResource("Shader_kq5a2")
shader_parameter/blur_radius = 3.715
shader_parameter/blur_direction = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kq5a2"]

[sub_resource type="Shader" id="Shader_q3rcv"]
code = "shader_type canvas_item;

// Horizontal (Y-based scanline) controls
uniform bool enable_horizontal = true;
uniform float amplitude_h : hint_range(0.0, 50.0) = 20.0;
uniform float frequency_h : hint_range(0.0, 10.0) = 5.0;
uniform float speed_h : hint_range(0.0, 10.0) = 1.0;
uniform float opacity_h : hint_range(0.0, 1.0) = 1.0;
uniform int step_count_h : hint_range(1, 128) = 8;

// Vertical (X-based columnline) controls
uniform bool enable_vertical = true;
uniform float amplitude_v : hint_range(0.0, 50.0) = 20.0;
uniform float frequency_v : hint_range(0.0, 10.0) = 5.0;
uniform float speed_v : hint_range(0.0, 10.0) = 1.0;
uniform float opacity_v : hint_range(0.0, 1.0) = 1.0;
uniform int step_count_v : hint_range(1, 128) = 8;

void fragment() {
    float offset_x = 0.0;
    float offset_y = 0.0;

    // Horizontal distortion (Y-axis based)
    if (enable_horizontal) {
        float y_px = floor(FRAGCOORD.y);
        float wave_h = sin(y_px * frequency_h * 0.01 + TIME * speed_h);
        float stepped_wave_h = floor(wave_h * float(step_count_h)) / float(step_count_h);
        offset_x = stepped_wave_h * (amplitude_h * SCREEN_PIXEL_SIZE.x);
    }

    // Vertical distortion (X-axis based)
    if (enable_vertical) {
        float x_px = floor(FRAGCOORD.x);
        float wave_v = sin(x_px * frequency_v * 0.01 + TIME * speed_v);
        float stepped_wave_v = floor(wave_v * float(step_count_v)) / float(step_count_v);
        offset_y = stepped_wave_v * (amplitude_v * SCREEN_PIXEL_SIZE.y);
    }

    vec2 distorted_uv = UV + vec2(offset_x, offset_y);

    vec4 tex_color = texture(TEXTURE, distorted_uv);

    // Apply opacity blending
    float final_opacity = 1.0;
    if (enable_horizontal && enable_vertical) {
        final_opacity = mix(opacity_h, opacity_v, 0.5);
    } else if (enable_horizontal) {
        final_opacity = opacity_h;
    } else if (enable_vertical) {
        final_opacity = opacity_v;
    }

    tex_color.a *= final_opacity;

    COLOR = tex_color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j1ebr"]
shader = SubResource("Shader_q3rcv")
shader_parameter/enable_horizontal = true
shader_parameter/amplitude_h = 11.532
shader_parameter/frequency_h = 1.855
shader_parameter/speed_h = 1.0
shader_parameter/opacity_h = 1.0
shader_parameter/step_count_h = 4
shader_parameter/enable_vertical = false
shader_parameter/amplitude_v = 20.0
shader_parameter/frequency_v = 5.0
shader_parameter/speed_v = 1.0
shader_parameter/opacity_v = 1.0
shader_parameter/step_count_v = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dt46u"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_q3rcv"]
font = ExtResource("4_2qvr3")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_dt46u"]
font = ExtResource("5_2qvr3")
font_color = Color(1, 0.0509804, 0.0509804, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[node name="WarningModal" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_75o2t")
script = ExtResource("1_q3rcv")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_t4xaw")
layout_mode = 2

[node name="ColorRectBG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0.796078)

[node name="Splash" parent="." instance=ExtResource("2_w10ti")]
layout_mode = 2
title = "WARNING"
v_offset = 100

[node name="ModalControl" type="Control" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ModalControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_kq5a2")

[node name="MarginContainer2" type="MarginContainer" parent="ModalControl/PanelContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ModalControl/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ImageTextureRect" type="TextureRect" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
material = SubResource("ShaderMaterial_j1ebr")
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
texture = ExtResource("2_wo0rv")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_bottom = 59.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dt46u")

[node name="MarginContainer" type="MarginContainer" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SCP-1047"
label_settings = SubResource("LabelSettings_q3rcv")

[node name="Label2" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer/ImageTextureRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ITEM CLASS: KETER"
label_settings = ExtResource("5_dt46u")
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "WARNING TITLE"
label_settings = ExtResource("4_w10ti")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SubLabel" type="Label" parent="ModalControl/PanelContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Warning details."
label_settings = SubResource("LabelSettings_dt46u")
horizontal_alignment = 1
autowrap_mode = 2

[node name="BtnControls" parent="." instance=ExtResource("9_0amot")]
layout_mode = 2
a_btn_title = "CONFIRM"
